--- a/index.html
+++ b/index.html
@@ -41,10 +41,16 @@ input {
 #footer {
   font-weight:500; font-size:13px; position:absolute; bottom:20px; text-align:center; width:100%; left:0px;
 }
+#logo {
+  width:160px; margin-top:30px;
+}
 /* DESKTOP VIEW */
 @media (min-width: 600px) {
   .hide-on-desktop {
     display:none;
+  }
+  input {
+      max-width: 47%;
   }
 }
 /* MOBILE VIEW */
@@ -55,6 +61,9 @@ input {
   #footer {
     font-size:10px;
   }
+  input {
+    max-width: 97%;
+  }
 }
 </style>
 </head>
@@ -63,6 +72,7 @@ input {
 <center>
 
 <img src=https://thebitcoincompany.com/assets/img/logos/tbc.svg style="width:100px; margin-top:30px">
+<!--img id="logo" src=honey.png-->
 
 <div style="margin-top:40px; margin-bottom:30px">
 <h1>Sats Dash</h1>
@@ -170,7 +180,7 @@ function resizeInput() {
     console.log("length is " + length)
     var newLength = length * 9;
     console.log("new length of " + $(this).val() + " is " + newLength);
-    if (newLength > 100) {
+    if (newLength > 90) {
       $(this).width(newLength);
     }
     else
