--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
   color:white;
   font-family: 'Manrope', sans-serif;
   font-weight:700;
-  background:linear-gradient(68.78deg,#ff6ab4 -5.3%,#ffd569 124.36%);
+  background:linear-gradient(68.78deg,#FF5C98 -5.3%,#FF9C23 124.36%);
 }
 a {
   text-decoration:none;
@@ -81,7 +81,7 @@ input {
 <body>
 <center>
 
-<a href=https://thebitcoincompany.com><img id="logo" src=https://thebitcoincompany.com/assets/img/logos/tbc.svg></a>
+<a href=https://thebitcoincompany.com><img id="logo" src=files/new-logo.svg></a>
 
 <div style="margin-top:40px; margin-bottom:30px">
 <h1>Sats Dash</h1>
