--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ input {
 <body>
 <center>
 
-<a href=https://thebitcoincompany.com><img id="logo" src=files/new-logo.svg></a>
+<a href=https://thebitcoincompany.com><img id="logo" src=files/new-logo.png></a>
 
 <div style="margin-top:40px; margin-bottom:30px">
 <h1>Sats Dash</h1>
